# drive_ros_msgs

./: CMakeLists.txt  package.xml
include/drive_ros_msgs/: tf2_IMU.h  tf2_Obstacle.h  tf2_PoseWithCovariance.h  tf2_drive_ros_msgs.h
msg/: BoundingBox.msg  BoundingBoxArray.msg  DetectedIntersection.msg  DrivingLine.msg  EncoderLinear.msg  EnvironmentModel.msg  Lane.msg  Obstacle.msg  ObstacleArray.msg  ObstacleEnvironment.msg  PedestrianEnvironment.msg  RoadLane.msg  RoadLine.msg  StreetMarking.msg  StreetMarkingArray.msg  TimeCompare.msg  TrafficMarkEnvironment.msg  TrajectoryMetaInput.msg  TrajectoryPoint.msg  VehicleEncoder.msg  mav_cc16_DEBUG.msg  mav_cc16_HEARTBEAT.msg  mav_cc16_IMU.msg  mav_cc16_NOTIFICATION.msg  mav_cc16_ODOMETER.msg  mav_cc16_ODOMETER_ABS.msg  mav_cc16_ODOMETER_DELTA.msg  mav_cc16_ODOMETER_DELTA_RAW.msg  mav_cc16_ODOMETER_RAW.msg  mav_cc16_PARKING_LOT.msg  mav_cc16_PROXIMITY.msg  mav_cc16_TELEMETRY.msg  mav_cc16_TIMES.msg  simple_trajectory.msg
srv/: ParkingFinished.srv  ParkingInProgress.srv
